Update CSS menu, and background and style of main text

--- a/index.html
+++ b/index.html
@@ -23,16 +23,28 @@ family=Rubik:wght@400;700&display=swap"
           alt="Logo Adalab"
       /></a>
       <nav class="header-nav">
-        <ul>
-          <li><a href="https://adalab.es/blog/" target="_blank">Blog</a></li>
+        <ul class="header-nav-ul">
           <li>
-            <a href="https://adalab.es/contacto/" target="_blank">Contacto</a>
+            <a
+              class="header-nav-link"
+              href="https://adalab.es/blog/"
+              target="_blank"
+              >Blog</a
+            >
+          </li>
+          <li>
+            <a
+              class="header-nav-link"
+              href="https://adalab.es/contacto/"
+              target="_blank"
+              >Contacto</a
+            >
           </li>
         </ul>
       </nav>
     </header>
     <main class="main">
-      <h1>Creando Diversidad Digital</h1>
+      <h1 class="main-title">Creando Diversidad Digital</h1>
     </main>
   </body>
 </html>
