--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@ family=Rubik:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/main.css" />
-    <title>Blanca Ubis Martínez - Módulo 1 - Evaluación intermedia</title>
+    <link
+      rel="icon"
+      href="./images/cropped-logo-32x32.webp"
+      sizes="32x32"
+    />
+    <link rel="icon" href="./images/cropped-logo-192x192.webp" sizes="192x192">
+
+    <title>▷ Adalab - Escuela Tecnológica para Mujeres</title>
+    <!-- Blanca Ubis Martínez - Módulo 1 - Evaluación intermedia -->
   </head>
   <body>
     <header class="header">
