Update root font-family and delete space HTML

--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@ family=Rubik:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/main.css" />
+    <link rel="icon" href="./images/cropped-logo-32x32.webp" sizes="32x32" />
     <link
       rel="icon"
-      href="./images/cropped-logo-32x32.webp"
-      sizes="32x32"
+      href="./images/cropped-logo-192x192.webp"
+      sizes="192x192"
     />
-    <link rel="icon" href="./images/cropped-logo-192x192.webp" sizes="192x192">
-
     <title>▷ Adalab - Escuela Tecnológica para Mujeres</title>
     <!-- Blanca Ubis Martínez - Módulo 1 - Evaluación intermedia -->
   </head>
