Update index.html added title attribute to header link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@ family=Rubik:wght@400;700&display=swap"
   </head>
   <body>
     <header class="header">
-      <a href="https://adalab.es/" target="_blank"
+      <a
+        href="https://adalab.es/"
+        target="_blank"
+        title="Página web principal de Adalab"
         ><img
           class="header-logo-img"
           src="./images/adalab-logo-155x61.png"
