Update main-title to capitalize words with CSS

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ family=Rubik:wght@400;700&display=swap"
       </nav>
     </header>
     <main class="main">
-      <h1 class="main-title">Creando Diversidad Digital</h1>
+      <h1 class="main-title">Creando diversidad digital</h1>
     </main>
   </body>
 </html>
